--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kenny Chhoeun | ePortfolio</title>
+  <title>Ben azzouz El Mehdi | ePortfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -351,7 +351,7 @@
             Resume
           </a>
         </div>
-        <div class="footer__copyright">Copyright &copy; 2022 Kenny Chhoeun</div>
+        <div class="footer__copyright">Copyright &copy; 2022 Ben azzouz El Mehdi</div>
       </div>
     </div>
   </footer>
