--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="https://www.linkedin.com/in/kennychhoeun/" target="_blank" class="social__link click">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/KennyChhoeun" target="_blank" class="social__link click">
+          <a href="https://github.com/MaDdx-dev" target="_blank" class="social__link click">
             <i class="fab fa-github"></i>
           </a>
           <a href="./assets/Kenny_Chhoeun_Resume.pdf" target="_blank" class="social__link click">
@@ -329,7 +329,7 @@
         ">
             GitHub
           </a>
-          <a href="https://www.linkedin.com/in/KennyChhoeun/" target="_blank" class="
+          <a href="https://www.linkedin.com/in/el-mehdi-ben-azzouz-a0ba601b3/" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
