--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           Here's a bit more <b class="blue click" onclick="toggleModal()">about me</b>.
         </p>
         <div class="social__list">
-          <a href="https://www.linkedin.com/in/kennychhoeun/" target="_blank" class="social__link click">
+          <a href="https://www.linkedin.com/in/el-mehdi-ben-azzouz-a0ba601b3/" target="_blank" class="social__link click">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/MaDdx-dev" target="_blank" class="social__link click">
