--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 class="title blue">I'm Mehdi.</h1>
         <p class="header__para">
           I'm an aspiring <b class="blue">Data & Knowledge Engineer</b> with a strong passion for building great user experiences 
-          and continuing to learn and developing my skills.
+          and continuing to learn and developing my skill.
           <br>
           Here's a bit more <b class="blue click" onclick="toggleModal()">about me</b>.
         </p>
